packages/css/src/less/circles.less
// TODO: remove bootstrap dependencies

// variables
@import (reference) 'bootstrap/less/variables.less';
@import './variables/_spacing.less';

// mixins
@import (reference) 'bootstrap/less/mixins/circle.less';

@import 'bootstrap/less/circle.less';

// From transferwise.less

li,
li > a {
  > .circle:first-child {
    margin-right: var(--spacer);
  }
}

.btn {
  .circle:first-child {
    margin-right: var(--spacer);
  }
}

.btn .circle .tw-icon,
.dropdown-menu li .circle .tw-icon {
  float: none;
  margin-top: 0;
  margin-left: 0;
  margin-right: 0;
}

.circle {
  display: flex;
  align-items: center;
  justify-content: center;
}

